--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/Messages.properties
@@ -1,2 +1,3 @@
 Action.DisplayName=Commits
 Recorder.DisplayName=Reference Build Finder
+FieldValidator.Error.ReferenceJobDoesNotExist=There is no such job - maybe the job has been renamed?
