Merger GitParentCommitFinder with GitReferenceRecorder

--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/Messages.properties
@@ -2,3 +2,5 @@ Action.DisplayName=Commits
 Recorder.DisplayName=Reference Build Finder
 FieldValidator.Error.ReferenceJobDoesNotExist=There is no such job - maybe the job has been renamed?
 No.Reference.Build=no reference build found
+ReferenceBuildSelectionStrategy.PARENT_COMMIT_BUILD=Parent commit reference build
+ReferenceBuildSelectionStrategy.BEST_MATCH_BUILD=Best reference build matching with current build
