--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/Messages.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/Messages.properties
@@ -1,4 +1,4 @@
 Action.DisplayName=Commits
-Recorder.DisplayName=Reference Build Finder
+Recorder.DisplayName=Discover Git reference build
 FieldValidator.Error.ReferenceJobDoesNotExist=There is no such job - maybe the job has been renamed?
 No.Reference.Build=no reference build found
